--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <div class="main">
     <p class="sign" align="center">Sign in</p>
-    <form method="POST" name="form" action="https://localhost:8000/game.html">
+    <form method="POST" name="form" action="https://colinkron.github.io/connect_four/game.html">
       <input class="field" type="text" name="username" placeholder="Username" required>
       <input class="field" type="text" name="password" placeholder="Password" required>
       <input class="field" type="text" name="image" placeholder="Your Image" onchange="return getImage(false, false)" required>
