--- a/public/game.html
+++ b/public/game.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>COMP 20 - HW 8</title>
+	<title>Connect 4</title>
 	<meta charset="utf-8">
 	<style>
 		html, body {
