--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- Contains HTML and the Javascript for the form data
 
 1:12pm:https://stackoverflow.com/questions/17863986/is-there-a-way-to-pass-javascript-variables-in-url
-for coding the url....
+for coding the url...
 
 
  -->
@@ -10,7 +10,7 @@ for coding the url....
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="apistyle.css">
-    <title>Sign in Page</title>
+    <title>Connect 4 Sign In</title>
 </head>
 
 <body onload="getImage(true, false)">
