--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@ for coding the url...
     <form method="POST" name="form" action="/game">
       <input class="field" type="text" name="username" placeholder="Username" required>
       <!-- <input class="field" type="text" name="password" placeholder="Password" required> -->
-      <input class="field" type="text" name="image" placeholder="Your Image" onchange="return getImage(false, false)" required>
+      <input class="field" type="text" name="image" placeholder="Your Image" onchange="return getImage(false, false)">
       <input type="submit" class="submit" set="Sign In" action ></input>
       <p class="linker" align="center"><a href="https://spencergallant.github.io/comp20_api/">Reference for the Image API</a></p>
     </form>
