--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,6 @@
 <!-- Contains HTML and the Javascript for the form data
-
 1:12pm:https://stackoverflow.com/questions/17863986/is-there-a-way-to-pass-javascript-variables-in-url
 for coding the url...
-
-
  -->
 <!DOCTYPE html>
 <html>
@@ -21,17 +18,18 @@ for coding the url...
     <form method="POST" name="form" action="/game">
       <input class="field" type="text" name="username" placeholder="Username" required>
       <!-- <input class="field" type="text" name="password" placeholder="Password" required> -->
-      <input class="field" type="text" name="image" placeholder="Your Image" onchange="return getImage(false, false)">
+      <input class="field" type="text" name="image" placeholder="Your Image*" onchange="return getImage(false, false)">
       <input type="submit" class="submit" set="Sign In" action ></input>
       <p class="linker" align="center"><a href="https://spencergallant.github.io/comp20_api/">Reference for the Image API</a></p>
+      <p class="disclaimer"> * If you have a registered username,<br>
+        you may leave the image field blank. <p>
     </form>
 
 
 
   </div>
-    <p class = "text" id = "note">Your game background based on your image keyword </p> <br/>
+    <p class = "text" id = "note">Your icon, based on your image keyword </p> <br/>
     <div class="picture" name = "picture" id = "picture"></div> <br/>
-    <p class = "image" name= "image" id = "image"> </p> <br/>
 
   <script type="text/javascript">
 
@@ -66,8 +64,6 @@ for coding the url...
               numImage = 0;
             }
             document.getElementById("picture").innerHTML ="<img class='picture' src='" + imageData["hits"][numImage]["webformatURL"] + "'>";
-            var image_name = imageData["hits"][numImage]["webformatURL"];
-            document.getElementById("image").innerHTML = image_name;
           }
           else if (request.readyState == 4 && request.status != 200) {
             document.getElementById("picture").innerHTML = "Something is wrong!  Check the logs to see where this went off the rails";
@@ -81,23 +77,7 @@ for coding the url...
 
       // parsing!
 
-      function getUrlParameter(name) {
-            name = name.replace(/[\[]/, '\\[').replace(/[\]]/, '\\]');
-            var regex = new RegExp('[\\?&]' + name + '=([^&#]*)');
-            var results = regex.exec(location.search);
-            return results === null ? '' : decodeURIComponent(results[1].replace(/\+/g, ' '));
-          }
 
-    function usernameTaken() {
-          var failure = getUrlParameter("status");
-         // console.log(failure);
-
-          if (failure){
-              document.getElementById("fail").innerHTML = "Username taken. Enter a new one.";
-          }
-      }
-
-          usernameTaken();
 
     </script>
   </body>
