--- a/public/game.html
+++ b/public/game.html
@@ -62,12 +62,9 @@
 		}
 		.picture {
 			border-radius: 5em;
-			min-height: 75px;
-			max-height:75px;
-			min-width: 75px;
-			max-width: 75px;
+			height: auto;
 			display: block;
-			margin-left: 50%;
+			margin-left: 20%;
 			width: 50%;
 		}
 	</style>
